--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,20 @@ services:
     volumes:
       - .:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+    environment:
+      DB_HOST: postgres
+      DB_NAME: "app"
+      DB_USER: "postgres"
+      DB_PASS: "postgres"
+    depends_on:
+      - db
+
+  postgres:
+    container_name: postgres_container
+    image: postgres:13.8
+    environment:
+      POSTGRES_DB: "app"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
