--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 django>=4.0.1,<4.1.5
-psycopg2-binary
+psycopg2-binary>=2.9.5
 flake8>=6.0.0
+django-phone-field>=1.7.1, <=1.8.1
+Pillow>=9.0.1, >=9.4.0
