--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-django>=4.0.1,<4.1.5
-psycopg2-binary>=2.9.5
-flake8>=6.0.0
-django-phone-field>=1.7.1, <=1.8.1
-Pillow>=9.0.1, >=9.4.0
+asgiref==3.6.0
+beautifulsoup4==4.12.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+cssutils==2.6.0
+Django==4.1.4
+django-inlinecss==0.3.0
+django-phone-field==1.8.1
+flake8==6.0.0
+future==0.18.3
+idna==3.4
+Jinja2==3.1.2
+mailchimp-marketing==3.0.80
+MarkupSafe==2.1.2
+mccabe==0.7.0
+Pillow==9.4.0
+psycopg2-binary==2.9.5
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pynliner==0.8.0
+python-dateutil==2.8.2
+requests==2.28.2
+six==1.16.0
+soupsieve==2.4
+sqlparse==0.4.3
+urllib3==1.26.15
