--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,40 @@
+aniso8601==7.0.0
 asgiref==3.6.0
 beautifulsoup4==4.12.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 cssutils==2.6.0
 Django==4.1.4
+django-environ==0.10.0
+django-filter==23.2
+django-graphql-jwt==0.4.0
 django-inlinecss==0.3.0
 django-phone-field==1.8.1
 flake8==6.0.0
 future==0.18.3
+graphene==2.1.9
+graphene-django==2.16.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
 idna==3.4
 Jinja2==3.1.2
 mailchimp-marketing==3.0.80
 MarkupSafe==2.1.2
 mccabe==0.7.0
 Pillow==9.4.0
+promise==2.3
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pyflakes==3.0.1
+PyJWT==2.8.0
 pynliner==0.8.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 requests==2.28.2
+Rx==1.6.3
+singledispatch==4.0.0
 six==1.16.0
 soupsieve==2.4
 sqlparse==0.4.3
+text-unidecode==1.3
 urllib3==1.26.15
