--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,69 @@
 aniso8601==7.0.0
+asgi-redis==1.1.0
 asgiref==3.6.0
+async-timeout==4.0.3
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
 beautifulsoup4==4.12.0
 certifi==2022.12.7
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.1.0
+constantly==15.1.0
+cryptography==41.0.3
 cssutils==2.6.0
+daphne==4.0.0
 Django==4.1.4
 django-environ==0.10.0
 django-filter==23.2
 django-graphql-jwt==0.4.0
 django-inlinecss==0.3.0
 django-phone-field==1.8.1
+djangorestframework==3.14.0
 flake8==6.0.0
 future==0.18.3
 graphene==2.1.9
 graphene-django==2.16.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 Jinja2==3.1.2
 mailchimp-marketing==3.0.80
 MarkupSafe==2.1.2
 mccabe==0.7.0
+msgpack==1.0.5
+msgpack-python==0.5.6
 Pillow==9.4.0
+pip==23.2.1
 promise==2.3
 psycopg2-binary==2.9.5
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycodestyle==2.10.0
+pycparser==2.21
 pyflakes==3.0.1
 PyJWT==2.8.0
 pynliner==0.8.0
+pyOpenSSL==23.2.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
+redis==5.0.0
 requests==2.28.2
 Rx==1.6.3
+service-identity==23.1.0
+setuptools==59.6.0
 singledispatch==4.0.0
 six==1.16.0
 soupsieve==2.4
 sqlparse==0.4.3
 text-unidecode==1.3
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.7.1
 urllib3==1.26.15
+zope.interface==6.0
